--- a/checker/Makefile
+++ b/checker/Makefile
@@ -4,6 +4,7 @@ RM = rm -f
 SRCDIR = src
 INCDIR = include
 CFLAGS = -Wall -Wextra -Werror -I$(INCDIR)
+LIBRARY = ../push_swap/libpush_swap.a
 
 SRCS = $(SRCDIR)/get_next_line_utils.c \
 		$(SRCDIR)/get_next_line.c \
@@ -11,11 +12,12 @@ SRCS = $(SRCDIR)/get_next_line_utils.c \
 
 OBJS = $(SRCS:.c=.o)
 
-.c.o:
-	$(CC) -c $< -o $(<:.c=.o)
+%.o : %.c
+	$(CC) $(CFLAGS) -c $< -o $@
 
-$(NAME): $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+$(NAME): $(OBJS) $(LIBRARY)
+	$(CC) $^ -o $(NAME)
+	cp $(NAME) ../push_swap
 
 all: $(NAME)
 
@@ -24,6 +26,7 @@ clean:
 
 fclean: clean
 	$(RM) $(NAME)
+	$(RM) ../push_swap/$(NAME)
 
 re: fclean all
 
